--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
             box-shadow: 0px 0px 3px 0px gray;
         }
 
-    .mybtn{
-        display: flex;
+        .mybtn {
+            display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
 
             margin-top: 20px;
-    }
+        }
 
-    .mybtn > button{
-        margin-right: 10px ;
-    }
+        .mybtn>button {
+            margin-right: 10px;
+        }
     </style>
 </head>
 
@@ -94,6 +94,15 @@
         <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">영화 URL</label>
+        </div>
+        <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">별점</label>
+            <select class="form-select" id="inputGroupSelect01">
+                <option selected>--선택하기--</option>
+                <option value="1">⭐</option>
+                <option value="2">⭐⭐</option>
+                <option value="3">⭐⭐⭐</option>
+            </select>
         </div>
         <form class="form-floating">
             <input type="email" class="form-control is-invalid" id="floatingInputInvalid" placeholder="name@example.com"
